<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/base_activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_devices_list"/>
        <Button
            android:id="@+id/button_rescan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/text_rescan"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/lists_container">
        <ListView
            android:id="@+id/devices_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:visibility="visible" />
        <ListView
            android:id="@+id/services_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
        <ListView
            android:id="@+id/charactersitics_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_text"
        android:id="@+id/button_connect"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_text"
        android:id="@+id/button_disconnect"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/device_will_appear_text"
        android:id="@+id/textView_devices"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"  />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/propertiesContainer"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:id="@+id/textView_ble_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac_text"
            android:id="@+id/textView_ble_mac" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services_text"
            android:id="@+id/textView_ble_services" />
    </LinearLayout>


</LinearLayout>